ChangeLog
=========

Release: 1.3.1
===============================================================================
2022-03-30 Added orientation sensor to turn from portrait to inverted portrait
           or from landscape to inverted landscape and back.

2022-03-26 Completed the PHN commands.

2022-03-25 Fixed the SIP client configuration.
           Added SIP configuration for network protocolls and to handle
           behavior behind a firewall.

2022-03-18 Added some not supported but possible commands to the table of known
           commands in tamxcommand.cpp.
           Improved the way commands are identified as such.

2022-03-16 Added linphone libraries to android build.
           Fixed the scaling for the download button in the settings dialog.
           Fixed a bug on a fresh installation when no controller was
           configured.

2022-03-10 Added support for more than 1 phone line.

2022-03-09 Added a new class to handle SIP commands and to abstract the
           linphone library.
           Started to add some ^PHN commands.

Release: 1.3.0
===============================================================================
2022-03-07 Changed the edit line "TP4 file name" into a comboBox and added
           a button to force the download of a surface file.
           The contents of the comboBox are feeded by a directory read on the
           controller. Each file with the extension "TP4" (case insensitive)
           is added as an item to the comboBox. The surface will now be
           downloaded when the selection in the comboBox changed  or the force
           button was clicked. The foce button gets a red background if the
           user wants to download the surface in any way. To be sure the user is
           asked whether the surface file should be downloaded or not.

           The second way to download a surface file is when the directory with
           the surface does not exist or contains the hidden file ".system".